# zeno

./: .gitignore  LICENSE  NOTICE  README.md  README.zh-CN.md  Zeno-JD校准与消歧报告.md  Zeno引导式访谈设计.md  Zeno能力迁移图谱-初版结构.md  Zeno迁移矩阵-数据分析报告.md  Zeno黑客松demo分镜脚本.md  ai3-0g-deck-prompt-最小改动.md  ai3-0g-deck-prompt.md  ai3-0g-作品描述.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  genesis-deck-prompt-和-demo脚本.md  genesis-hackathon-报名表填写.md  genesis-半决赛DemoDay-路演与QA.md  interview.md  package-lock.json  package.json  zeno-demo-字幕.srt
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  vercel.json  zeno.db
apps/api/api/: index.py
apps/api/app/: main.py  models.py  schemas.py
apps/api/app/core/: config.py  db.py  startup_checks.py
apps/api/app/data/: assess_sim.py  build_transfer_matrix.py  check_assess_invariants.py  experience_capsules.json  jd_evidence.json  path_config.demo.json  path_config.json  recommend_demo.py  seed_resources.py  skill_graph.demo.json  skill_graph.json  skill_graph.json.bak  source_profiles.json  transfer_matrix.json
apps/api/app/domain/: _capsule_migration.py  (+14 more)
apps/api/migrations/: env.py
apps/api/scripts/: build_jd_evidence.py  curate_resources.py  export_gold_template.py  ingest_jds.py  mine_out_of_graph.py  reembed_resources.py  try_deepseek_voice.py
apps/api/tests/: test_0g_receipt.py  test_correction_evidence.py  test_curation_agent.py  test_decision.py  test_embedding.py  test_eval.py  test_explain.py  test_interview.py  test_jd_orientation.py  test_orientation.py  test_pacing.py  test_resource_engine.py
(+92 files in other folders)
